# fast_thp

./: CMakeLists.txt
include/: Card.h  Fivecards.h  Makefile  Player_xsl.h  Poker.h  Sevencards.h  XString.h  for-human.h  methods.h
src/: Fivecards.cpp  Poker.cpp  data-process.py
test/: test.cpp
